--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "owl.carousel": "owl-carousel2#^2.3.4",
-    "jquery-mask-plugin": "jquery-mask#^1.14.15"
+    "jquery-mask-plugin": "jquery-mask#^1.14.15",
+    "fontawesome": "^5.7.2",
+    "jquery-ui": "^1.12.1"
   }
 }
